--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -459,11 +459,13 @@
     <Compile Include="World\Battlefronts\Bounty\IBountyManager.cs" />
     <Compile Include="World\Battlefronts\Bounty\IContributionManager.cs" />
     <Compile Include="World\Battlefronts\Bounty\IImpactMatrixManager.cs" />
+    <Compile Include="World\Battlefronts\Bounty\IRewardManager.cs" />
     <Compile Include="World\Battlefronts\Bounty\PlayerContribution.cs" />
     <Compile Include="World\Battlefronts\Bounty\PlayerImpact.cs" />
     <Compile Include="World\Battlefronts\Bounty\ImpactMatrixManager.cs" />
     <Compile Include="World\Battlefronts\Bounty\RenownBandRVRObjectiveTick.cs" />
     <Compile Include="World\Battlefronts\Bounty\PlayerRVRGearDrop.cs" />
+    <Compile Include="World\Battlefronts\Bounty\Reward.cs" />
     <Compile Include="World\Battlefronts\Bounty\RewardPlayerKill.cs" />
     <Compile Include="World\Battlefronts\Bounty\RenownBandRVRPairingLock.cs" />
     <Compile Include="World\Battlefronts\Bounty\RenownBandRVRZoneLock.cs" />
