UNdo padding nlog config

--- a/WorldServer/NLog.config
+++ b/WorldServer/NLog.config
@@ -13,7 +13,7 @@
   <targets>
     <default-wrapper xsi:type="AsyncWrapper" timeToSleepBetweenBatches="0" overflowAction="Block" />
     <target name="logfile" xsi:type="File" fileName="${basedir}/logs/${shortdate}.log"
-            layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${pad:padding=20,fixedlength=true:${message}}" />
+            layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
     <target name="rewardLogToFile" xsi:type="File" fileName="${basedir}/logs/REWARD_${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
     <target name="deathLogToFile" xsi:type="File" fileName="${basedir}/logs/DEATH_${shortdate}.log"
