Allow blackmarket to send BOP items, change random WLC drop

--- a/WorldServer/NLog.config
+++ b/WorldServer/NLog.config
@@ -26,11 +26,14 @@
             layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
     <target name="bountyLogToFile" xsi:type="File" fileName="${basedir}/logs/BOUNTY_${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
+    <target name="mailLogToFile" xsi:type="File" fileName="${basedir}/logs/MAIL_${shortdate}.log"
+            layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
 
     <target name="logconsole" xsi:type="ColoredConsole" layout="${shortdate} ${uppercase:${level}} ${message}" />
   </targets>
 
   <rules>
+    <logger name="MailLogger" minlevel="Trace" writeTo="mailLogToFile" />
     <logger name="DeathLogger" minlevel="Trace" writeTo="deathLogToFile" />
     <logger name="RewardLogger" minlevel="Trace" writeTo="rewardLogToFile" />
     <logger name="BountyLogger" minlevel="Trace" writeTo="bountyLogToFile" />
