--- a/FrameWork/packages.config
+++ b/FrameWork/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Google.Protobuf" version="3.7.0" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.15" targetFramework="net472" />
+  <package id="NLog" version="4.6.8" targetFramework="net472" />
 </packages>
