--- a/Launcher/app.config
+++ b/Launcher/app.config
@@ -8,12 +8,12 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
   </startup>
   <appSettings>
-    <add key="ServerPatchIPAddress" value="app.warapoc.com"/>
+    <add key="ServerPatchIPAddress" value="127.0.0.1"/>
     <add key="ServerPatchPort" value="8080"/>
     <add key="PatchDirectory" value="..\.."/>
-    <add key="AutoLaunch" value="false"/>
+    <add key="AutoLaunch" value="true"/>
     <add key="PatchMYP" value="false"/>
-    <add key="PatchExe" value="false"/>
+    <add key="PatchExe" value="true"/>
     <add key="LaunchLocal" value="false"/>
   </appSettings>
 
