--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -522,6 +522,7 @@
     <Compile Include="World\Objects\DynamicVendor.cs" />
     <Compile Include="World\Objects\Boss.cs" />
     <Compile Include="World\Objects\BlackMarketVendorItem.cs" />
+    <Compile Include="World\Objects\HelperTime.cs" />
     <Compile Include="World\Objects\HonorVendorItem.cs" />
     <Compile Include="World\Objects\LootChest.cs" />
     <Compile Include="World\Objects\Instances\Bloodwrought Enclave\SimpleBarakustheGodslayer.cs" />
