Server/WarHelper: based class Helper code server

--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -522,7 +522,6 @@
     <Compile Include="World\Objects\DynamicVendor.cs" />
     <Compile Include="World\Objects\Boss.cs" />
     <Compile Include="World\Objects\BlackMarketVendorItem.cs" />
-    <Compile Include="World\Objects\HelperTime.cs" />
     <Compile Include="World\Objects\HonorVendorItem.cs" />
     <Compile Include="World\Objects\LootChest.cs" />
     <Compile Include="World\Objects\Instances\Bloodwrought Enclave\SimpleBarakustheGodslayer.cs" />
@@ -738,6 +737,8 @@
     <Compile Include="World\Scripting\GeneralScriptAttributes.cs" />
     <Compile Include="World\Scripting\Items\PotionScript.cs" />
     <Compile Include="World\Scripting\PacketSenderScript.cs" />
+    <Compile Include="World\WarHelper\RandomHelper.cs" />
+    <Compile Include="World\WarHelper\TimeHelper.cs" />
     <Compile Include="World\WorldSettings\WorldSettingsMgr.cs" />
   </ItemGroup>
   <ItemGroup>
