Core/build: fix

--- a/CharacterUtility/App.config
+++ b/CharacterUtility/App.config
@@ -14,7 +14,7 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-<<<<<<< Updated upstream
+        Updated upstream
         <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-8.0.20.0" newVersion="8.0.20.0" />
 =======
