--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -94,13 +94,13 @@
     <Compile Include="Database\Account\AccountSanctionInfo.cs" />
     <Compile Include="Database\Account\Account_value.cs" />
     <Compile Include="Database\Account\Ip_ban.cs" />
-	<Compile Include="Database\Account\Realm.cs" />
+    <Compile Include="Database\Account\Realm.cs" />
     <Compile Include="Database\Character\Auction.cs" />
     <Compile Include="Database\Character\BannedNameRecord.cs" />
     <Compile Include="Database\Character\Bug_report.cs" />
     <Compile Include="Database\Character\CharacterDeletionRecord.cs" />
     <Compile Include="Database\Character\Characters.cs" />
-	<Compile Include="Database\Character\Characters_bag_pools.cs" />
+    <Compile Include="Database\Character\Characters_bag_pools.cs" />
     <Compile Include="Database\Character\CharacterSavedBuff.cs" />
     <Compile Include="Database\Character\Characters_info.cs" />
     <Compile Include="Database\Character\CharacterClientData.cs" />
@@ -112,17 +112,17 @@
     <Compile Include="Database\Character\Characters_tok.cs" />
     <Compile Include="Database\Character\Characters_ability.cs" />
     <Compile Include="Database\Character\Characters_influence.cs" />
-	<Compile Include="Database\Character\GMCommandLog.cs" />
-	<Compile Include="Database\Character\Guild_Alliance_info.cs" />
+    <Compile Include="Database\Character\GMCommandLog.cs" />
+    <Compile Include="Database\Character\Guild_Alliance_info.cs" />
     <Compile Include="Database\Character\Guild_event.cs" />
     <Compile Include="Database\Character\Guild_info.cs" />
     <Compile Include="Database\Character\Guild_log.cs" />
     <Compile Include="Database\Character\Guild_members.cs" />
     <Compile Include="Database\Character\Guild_rank.cs" />
     <Compile Include="Database\Character\ScenarioDurationRecord.cs" />
-	<Compile Include="Database\Character\GuildVaultItem.cs" />
+    <Compile Include="Database\Character\GuildVaultItem.cs" />
     <Compile Include="Database\GameData.cs" />
-	<Compile Include="Database\Patch\Launcher_myps.cs" />
+    <Compile Include="Database\Patch\Launcher_myps.cs" />
     <Compile Include="Database\SystemData.cs" />
     <Compile Include="Database\World\Ability\AbilityKnockbackInfo.cs" />
     <Compile Include="Database\World\Ability\AbilityModifierEffects.cs" />
@@ -173,7 +173,7 @@
     <Compile Include="Database\World\Characters\HonorRewardCooldon.cs" />
     <Compile Include="Database\World\Characters\PetStatOverride.cs" />
     <Compile Include="Database\World\Characters\PetMasteryModifiers.cs" />
-	<Compile Include="Database\World\Characters\Random_names.cs" />
+    <Compile Include="Database\World\Characters\Random_names.cs" />
     <Compile Include="Database\World\Characters\CharacterInfo_stats.cs" />
     <Compile Include="Database\World\Characters\HonorReward.cs" />
     <Compile Include="Database\World\Characters\Tok_Bestary.cs" />
@@ -192,7 +192,7 @@
     <Compile Include="Database\World\GameObjects\GameObject_loot.cs" />
     <Compile Include="Database\World\GameObjects\GameObject_proto.cs" />
     <Compile Include="Database\World\GameObjects\GameObject_spawn.cs" />
-	<Compile Include="Database\World\GMCommands\GMCommands.cs" />
+    <Compile Include="Database\World\GMCommands\GMCommands.cs" />
     <Compile Include="Database\World\Instances\InstanceAttribute.cs" />
     <Compile Include="Database\World\Instances\Instances_Statistics.cs" />
     <Compile Include="Database\World\Instances\Instance_Encounter.cs" />
@@ -226,11 +226,11 @@
     <Compile Include="Database\World\Maps\CellSpawns.cs" />
     <Compile Include="Database\World\Maps\RallyPoint.cs" />
     <Compile Include="Database\World\Maps\Zone_Area.cs" />
-	<Compile Include="Database\World\Maps\Zone_Info.cs" />
+    <Compile Include="Database\World\Maps\Zone_Info.cs" />
     <Compile Include="Database\World\Maps\Zone_Jump.cs" />
     <Compile Include="Database\World\Maps\Zone_Respawn.cs" />
     <Compile Include="Database\World\Maps\Zone_Taxi.cs" />
-	<Compile Include="Database\World\PQuests\PQuest_Loot_Crafting.cs" />
+    <Compile Include="Database\World\PQuests\PQuest_Loot_Crafting.cs" />
     <Compile Include="Database\World\PQuests\PQuest_Loot.cs" />
     <Compile Include="Database\World\PQuests\PQuest_Info.cs" />
     <Compile Include="Database\World\PQuests\PQuest_Objective.cs" />
@@ -281,6 +281,9 @@
     <Content Include="Icons\world.ico" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </None>
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
