--- a/AccountCacher/packages.config
+++ b/AccountCacher/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FakeItEasy" version="5.1.0" targetFramework="net472" />
-  <package id="Google.Protobuf" version="3.7.0" targetFramework="net472" />
+  <package id="Castle.Core" version="4.4.1" targetFramework="net48" />
+  <package id="FakeItEasy" version="6.2.1" targetFramework="net48" />
+  <package id="Google.Protobuf" version="3.14.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
 </packages>
