--- a/Launcher/Launcher.csproj
+++ b/Launcher/Launcher.csproj
@@ -83,9 +83,6 @@
     <Reference Include="MYPHandler, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\deps\EasyMyp\MYPHandler.dll</HintPath>
     </Reference>
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.5.6\lib\net45\NLog.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core">
@@ -201,7 +198,7 @@
     <Content Include="WAR.ico" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="nlog">
+    <PackageReference Include="NLog">
       <Version>4.7.5</Version>
     </PackageReference>
   </ItemGroup>
