--- a/WorldServer.Test/packages.config
+++ b/WorldServer.Test/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Appccelerate.StateMachine" version="4.4.0" targetFramework="net452" />
-  <package id="FakeItEasy" version="5.1.0" targetFramework="net472" />
-  <package id="NLog" version="4.6.8" targetFramework="net48" />
+  <package id="Castle.Core" version="4.4.1" targetFramework="net48" />
+  <package id="FakeItEasy" version="6.2.1" targetFramework="net48" />
+  <package id="NLog" version="4.7.5" targetFramework="net48" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net452" />
   <package id="xunit.analyzers" version="0.10.0" targetFramework="net452" />
   <package id="xunit.core" version="2.4.1" targetFramework="net452" />
