--- a/Launcher/app.config
+++ b/Launcher/app.config
@@ -8,11 +8,11 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
   </startup>
   <appSettings>
-    <add key="ServerPatchIPAddress" value="127.0.0.1"/>
+    <add key="ServerPatchIPAddress" value="projectwar.ddns.net"/>
     <add key="ServerPatchPort" value="8080"/>
     <add key="PatchDirectory" value="..\.."/>
     <add key="AutoLaunch" value="true"/>
-    <add key="PatchMYP" value="false"/>
+    <add key="PatchMYP" value="true"/>
     <add key="PatchExe" value="true"/>
     <add key="LaunchLocal" value="false"/>
   </appSettings>
