--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -421,6 +421,15 @@
     <Compile Include="World\Abilities\CareerInterfaces\CareerInterface_SlayerChoppa.cs" />
     <Compile Include="World\Abilities\CareerInterfaces\CareerInterface_BlackOrc.cs" />
     <Compile Include="World\Abilities\CareerInterfaces\CareerInterface_Swordmaster.cs" />
+    <Compile Include="World\Abilities\MythicAbilities\Ability.cs" />
+    <Compile Include="World\Abilities\MythicAbilities\AbilityComponent.cs" />
+    <Compile Include="World\Abilities\MythicAbilities\AbilityComponentVariables.cs" />
+    <Compile Include="World\Abilities\MythicAbilities\AbilityEngine.cs" />
+    <Compile Include="World\Abilities\MythicAbilities\AbilityEnums.cs" />
+    <Compile Include="World\Abilities\MythicAbilities\AbilityExport.cs" />
+    <Compile Include="World\Abilities\MythicAbilities\AbilityVariables.cs" />
+    <Compile Include="World\Abilities\MythicAbilities\DAMAGE.cs" />
+    <Compile Include="World\Abilities\MythicAbilities\PlayerService.cs" />
     <Compile Include="World\Abilities\NewChannelHandler.cs" />
     <Compile Include="World\Abilities\AbilityProcessor.cs" />
     <Compile Include="World\Abilities\CombatManager.cs" />
