AI Path Finding
Added Movement Generator for path finding system.
Credit: blastoise

--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -442,8 +442,26 @@
     <Compile Include="World\AI\BrainType.cs" />
     <Compile Include="World\AI\BT\ChosenBehaviourTree.cs" />
     <Compile Include="World\AI\BossBrain.cs" />
+    <Compile Include="World\AI\EnhancedAI\CombatCreatureStateMachine.cs" />
+    <Compile Include="World\AI\EnhancedAI\EnhancedCreature.cs" />
+    <Compile Include="World\AI\EnhancedAI\NonCombatCreatureStateMachine.cs" />
+    <Compile Include="World\AI\EnhancedAI\TargetSelectionMethod.cs" />
+    <Compile Include="World\AI\EnhancedAI\UnitAdaptor.cs" />
     <Compile Include="World\AI\HealerBrain.cs" />
     <Compile Include="World\AI\NpcBrain.cs" />
+    <Compile Include="World\AI\PathFinding\AStar.cs" />
+    <Compile Include="World\AI\PathFinding\AStar\ComparePfNodeMatrix.cs" />
+    <Compile Include="World\AI\PathFinding\AStar\HeuristicFormula.cs" />
+    <Compile Include="World\AI\PathFinding\AStar\IPathFinder.cs" />
+    <Compile Include="World\AI\PathFinding\AStar\IPriorityQueue.cs" />
+    <Compile Include="World\AI\PathFinding\AStar\PathFinder.cs" />
+    <Compile Include="World\AI\PathFinding\AStar\PathFinderNode.cs" />
+    <Compile Include="World\AI\PathFinding\AStar\PathFinderNodeFast.cs" />
+    <Compile Include="World\AI\PathFinding\AStar\PathFinderOptions.cs" />
+    <Compile Include="World\AI\PathFinding\AStar\Point.cs" />
+    <Compile Include="World\AI\PathFinding\AStar\PriorityQueueB.cs" />
+    <Compile Include="World\AI\PathFinding\Map.cs" />
+    <Compile Include="World\AI\PathFinding\SearchEngine.cs" />
     <Compile Include="World\AI\SlayerBrain.cs" />
     <Compile Include="World\AI\WitchHunterBrain.cs" />
     <Compile Include="World\AI\WitchElfBrain.cs" />
