Nuget/K4os.Compression.LZ4: update for last version

--- a/WorldServer/app.config
+++ b/WorldServer/app.config
@@ -37,6 +37,10 @@
         <assemblyIdentity name="Renci.SshNet" publicKeyToken="1cee9f8bde3db106" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2020.0.1.0" newVersion="2020.0.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="K4os.Compression.LZ4" publicKeyToken="2186fa9121ef231d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.16.0" newVersion="1.2.16.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
