--- a/WorldServer/app.config
+++ b/WorldServer/app.config
@@ -4,10 +4,11 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <runtime>
+    <gcServer enabled="true" />
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Google.Protobuf" publicKeyToken="a7d26565bac4d604" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.20.0.0" newVersion="3.20.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.16.0.0" newVersion="3.16.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
@@ -36,10 +37,6 @@
       <dependentAssembly>
         <assemblyIdentity name="Renci.SshNet" publicKeyToken="1cee9f8bde3db106" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2020.0.1.0" newVersion="2020.0.1.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="K4os.Compression.LZ4" publicKeyToken="2186fa9121ef231d" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.2.16.0" newVersion="1.2.16.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
