--- a/LauncherServer/LauncherServer.csproj
+++ b/LauncherServer/LauncherServer.csproj
@@ -81,7 +81,7 @@
     <Compile Include="Config\LauncherConfig.cs" />
     <Compile Include="Console\State.cs" />
     <Compile Include="PatchMgr.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Core.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\Client.cs" />
     <Compile Include="Server\Handler\Packets.cs" />
