--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -64,7 +64,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>WorldServer.Program</StartupObject>
+    <StartupObject>WorldServer.Core</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -733,7 +733,7 @@
     <Compile Include="NetWork\GameClient.cs" />
     <Compile Include="NetWork\Opcodes.cs" />
     <Compile Include="NetWork\TCPServer.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Core.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="World\Objects\ChapterObject.cs" />
     <Compile Include="World\Objects\Creature.cs" />
