Program/Nugets: update K4os.Hash.xxHash 1.0.7.0

--- a/FrameWork/app.config
+++ b/FrameWork/app.config
@@ -30,6 +30,10 @@
         <assemblyIdentity name="K4os.Compression.LZ4" publicKeyToken="2186fa9121ef231d" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.2.16.0" newVersion="1.2.16.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="K4os.Hash.xxHash" publicKeyToken="32cd54395057cec3" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.7.0" newVersion="1.0.7.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" /></startup></configuration>
