--- a/LobbyServer/LobbyServer.csproj
+++ b/LobbyServer/LobbyServer.csproj
@@ -80,7 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configs\LobbyConfigs.cs" />
+    <Compile Include="Config\LobbyConfig.cs" />
     <Compile Include="NetWork\Client.cs" />
     <Compile Include="NetWork\Handler\AuthentificationHandlers.cs" />
     <Compile Include="NetWork\Opcodes.cs" />
@@ -119,6 +119,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Config\LobbyConfig.xml" />
     <Content Include="lobby.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
